AC_INIT([loggerd],[0.0.1],[guinnux@kses.net],[key],[http://www.guinnux.co.za])
AM_INIT_AUTOMAKE([1.10 -Wall no-define])
AC_CONFIG_HEADERS([config.h])
AC_ARG_VAR([TOOLBIN],[bin directory of toolchain])
AC_ARG_VAR([SYSROOT],[sys-root for cross compile])
AC_ARG_VAR([PKG_DIR],[Package dir for OPK packages])
AC_CONFIG_FILES([Makefile])
AC_PROG_CC
AC_PROG_CXX
AC_CANONICAL_HOST
AC_OUTPUT


